# firestore-file-load

./: .gitignore  LICENCE  README.md  TODO.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_form.yml  bug_report.md  feature_request_form.yml
docs/: examples.md  schema-guide.md  type-system.md
firebase_uploader/: __init__.py  __main__.py  cli.py  collection_spec.py  csv-loader.py  firestore_repository.py  service.py  type_converters.py  uploader_interface.py
tests/: __init__.py  mock_repository.py  test_collection_spec.py  test_integration.py  test_mock_repository.py  test_service.py  test_type_conversion.py
tests/fixtures/: worlds.csv  worlds.json
