[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
# Project Metadata
name = "FirestoreFileLoad"
version = "0.1.1"
description = "A command-line tool to upload CSV (for now) data to Google Firestore."
readme = "README.md"
authors = [
    { name = "Felipe Paucar", email = "feliosphere@gmail.com" }
]
license = { text = "MIT" }

# Dependencies
dependencies = [
    "firebase-admin",
    "pandas",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
]

[project.scripts]
# Console Script Entry Point
ffload = "firebase_uploader.cli:cli_entrypoint"


[tool.setuptools.packages]
find = {}

# --- Optional Tool Configurations ---

[tool.black]
line-length = 88
target-version = ['py311']

[tool.pytest.ini_options]
addopts = "--strict-markers --strict-config"
testpaths = [
    "tests",
]
